--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -6,3 +6,13 @@ body{
 .ReactCollapse--collapse {
   transition: height 300ms;
 }
+
+.btn-blue{background: #3872fa !important; color: #fff !important; padding: 8px 20px !important;}
+.btn-blue:hover{background: #3067e5 !important;}
+.btn-lg{padding: 8px 20px !important; font-size: 16px !important;}
+
+a.active button{background: #dcdcdc !important;}
+
+.MuiButton-icon svg{font-size: 30px !important;}
+
+.css-rizt0-MuiTypography-root{font-size: 14px !important;}
