--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -1,8 +1,45 @@
-body{
+html,
+body {
+    height: 100%;
+}
+body {
     font-family: "Raleway", serif;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background: #f9fafb;
 }
 .MuiBadge-badge {background: #ff5252 !important;}
 
 .ReactCollapse--collapse {
   transition: height 300ms;
+}
+
+.main {
+    position: relative;
+}
+
+.contentMain {
+    margin-top: 60px;
+    min-height: calc(100vh - 60px);
+    display: flex;
+}
+
+.contentWrapper {
+    padding: 24px;
+    transition: margin-left 0.3s ease;
+    background: #f9fafb;
+    min-height: calc(100vh - 60px);
+    max-height: calc(100vh - 60px);
+    overflow-y: auto;
+    box-sizing: border-box;
+}
+
+@media (max-width: 1024px) {
+    .contentWrapper {
+        margin-left: 0 !important;
+        max-height: calc(100vh - 60px);
+        min-height: calc(100vh - 60px);
+        overflow-y: auto;
+    }
 }
