--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 /* * {
     margin: 0px;
@@ -6,38 +6,55 @@
     box-sizing: border-box;
 } */
 body {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    background: #f5f0f0;
-    color: rgba(0, 0, 0, 0.9);
-    overflow-x: hidden;
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
+  background: #f5f0f0;
+  color: rgba(0, 0, 0, 0.9);
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 8px !important;
+  height: 8px !important;
+}
+::-webkit-scrollbar-thumb {
+  background: #ff5252;
+}
+::-webkit-scrollbar-track {
+  background: #fff;
 }
 
 .bg-primary {
-    background: #ff5252;
+  background: #ff5252 !important;
 }
 
 .container {
-    width: 90%;
-    margin: auto;
+  width: 90%;
+  margin: auto;
 }
 .link:hover {
-    color: #ff5252;
+  color: #ff5252;
 }
 
-.sliderHome{
-    overflow: inherit !important;
+.sliderHome {
+  overflow: inherit !important;
 }
 
-.swiper-button-prev,.swiper-button-next{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #fff;
-    border-radius: 100%;
-    width: 45px;
-    height: 45px;
-    min-width: 45px;
+.swiper-button-prev,
+.swiper-button-next {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  border-radius: 100%;
+  width: 45px;
+  height: 45px;
+  min-width: 45px;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  background: #ff5252;
 }
 
 .swiper-button-prev::after,
@@ -51,44 +68,75 @@ body {
   stroke: #000 !important;
 }
 
-.homeCatSlider{
-    overflow: inherit !important;
+.smlBtn .swiper-button-prev,
+.smlBtn .swiper-button-next {
+  width: 30px !important;
+  height: 30px !important;
+  min-width: 30px !important;
+  top: 55% !important;
 }
 
-.homeCatSlider .item{
-    border: 1px solid rgba(0, 0, 0, 0.1);
+.smlBtn .swiper-button-prev::after,
+.smlBtn .swiper-button-next::after {
+  font-size: 18px;
+  color: #000;
 }
 
-.homeCatSlider .item:hover img{
-    transform: scale(1.1);
+.homeCatSlider {
+  overflow: inherit !important;
 }
 
-.homeCatSlider .swiper-button-prev{
-    width: 30px;
-    height: 30px;
-    min-width: 30px;
-    left: -10px !important;
+.homeCatSlider .item {
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.homeCatSlider .swiper-button-prev::after, .swiper-button-prev svg{
-    font-size: 12px !important;
+.homeCatSlider .item:hover img {
+  transform: scale(1.1);
 }
 
-.homeCatSlider .swiper-button-next{
-    width: 30px;
-    height: 30px;
-    min-width: 30px;
-    right: -10px !important;
+.homeCatSlider .swiper-button-prev {
+  width: 30px;
+  height: 30px;
+  min-width: 30px;
+  left: -10px !important;
 }
 
-.homeCatSlider .swiper-button-next::after, .swiper-button-next svg{
-    font-size: 12px !important;
+.homeCatSlider .swiper-button-prev::after,
+.swiper-button-prev svg {
+  font-size: 12px !important;
 }
 
-.homeCatSlider .swiper-button-prev:hover,.homeCatSlider .swiper-button-next:hover{
-    background: #ff5252 !important;
+.homeCatSlider .swiper-button-next {
+  width: 30px;
+  height: 30px;
+  min-width: 30px;
+  right: -10px !important;
 }
 
-.homeCatSlider .swiper-button-prev:hover::after, .homeCatSlider .swiper-button-next:hover::after{
-    background: #ff5252 !important;
+.homeCatSlider .swiper-button-next::after,
+.swiper-button-next svg {
+  font-size: 12px !important;
+}
+
+.homeCatSlider .swiper-button-prev:hover,
+.homeCatSlider .swiper-button-next:hover {
+  background: #ff5252 !important;
+}
+
+.homeCatSlider .swiper-button-prev:hover::after,
+.homeCatSlider .swiper-button-next:hover::after {
+  background: #ff5252 !important;
+}
+
+.MuiTabs-indicator {
+  background: #ff5252 !important;
+}
+.MuiTab-textColorPrimary.Mui-selected {
+  color: #ff5252 !important;
+}
+
+.productsSlider .swiper-wrapper {
+  padding: 15px;
+  margin-left: -15px;
+  margin-right: -15px;
 }
