--- a/client/src/index.css
+++ b/client/src/index.css
@@ -184,10 +184,31 @@ body {
 }
 
 .btn-lg {
-  height: 45px !important; /* Tạo độ cao cho nút (giống trong ảnh) */
-  font-weight: 600 !important; /* Chữ in đậm */
-  font-size: 14px !important; /* Kích cỡ chữ vừa phải */
-  text-transform: uppercase !important; /* Chữ in hoa: LOGIN WITH GOOGLE */
-  border-radius: 5px !important; /* Bo góc nhẹ giống các ô input */
-  box-shadow: none !important; /* Loại bỏ bóng mặc định của Material UI nếu cần */
+  height: 45px !important; 
+  font-weight: 600 !important; 
+  font-size: 14px !important; 
+  text-transform: uppercase !important; 
+  border-radius: 5px !important; 
+  box-shadow: none !important; 
+}
+.swiper-pagination-bullet-active {
+  background: #ff5252 !important;
+}
+.homeSliderV2 .swiper-slide-active .info {right: 0px !important;opacity: 1;}
+.homeSliderV2 .swiper-slide-active .info h4 {right: 0px !important;opacity: 1;}
+.homeSliderV2 .swiper-slide-active .info h2 {right: 0px !important;opacity: 1;}
+.homeSliderV2 .swiper-slide-active .info h3 {right: 0px !important;opacity: 1;}
+.homeSliderV2 .swiper-slide-active .info div {right: 0px !important;opacity: 1;}
+
+.homeSliderV2 .info h4 {
+  transition-duration: 1s;
+}
+.homeSliderV2 .info h2 {
+  transition-duration: 1.3s;
+}
+.homeSliderV2 .info h3 {
+  transition-duration: 1.5s;
+}
+.homeSliderV2 .info div {
+  transition-duration: 1.7s;
 }
