--- a/client/src/index.css
+++ b/client/src/index.css
@@ -319,3 +319,5 @@ input[type="number"]::-webkit-inner-spin-button {
 .productsSlider .swiper,.blogSection .swiper{overflow: inherit !important;}
 
 .cartPanel .MuiPaper-root{width: 400px !important; overflow: hidden !important;}
+
+#size-menu .MuiButtonBase-root{font-size: 12px !important;}
